--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "homepage": "https://olgalosikova.github.io/",
   "private": true,
+  "proxy": "http://itgirlschool.justmakeit.ru",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.5.1",
     "json-loader": "^0.5.7",
+    "node-fetch": "3.3.2^",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
