--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "foreign-languages",
   "version": "0.1.0",
-  "homepage": "https://olgalosikova.github.io/",
+  "homepage": ".",
   "private": true,
   "proxy": "http://itgirlschool.justmakeit.ru",
   "dependencies": {
